fix z-index issue with explorer-preview-nav

--- a/admin-base/materialize/custom/_explorer-preview.scss
+++ b/admin-base/materialize/custom/_explorer-preview.scss
@@ -271,6 +271,7 @@
         border-right: 1px solid #b0bec5;
         height: 100%;
         line-height: 45px;
+        cursor: pointer;
 
         &:first-child {
           border-left: none;
